--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,6 @@
 {
   "Information": "Information",
-  "Massage to relax and rehab": "Massage to relax and rehab"
+  "Japanies": "Japanies",
+  "Massage to relax and rehab": "Massage to relax and rehab",
+  "Study, practice and work": "Study, practice and work"
 }
