--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,4 +1,6 @@
 {
   "Information": "Информация",
-  "Massage to relax and rehab": "Массаж для расслабления и реабилитации"
+  "Japanies": "Японский",
+  "Massage to relax and rehab": "Массаж для расслабления и реабилитации",
+  "Study, practice and work": "Обучение, практика и работа."
 }
