--- a/src/translations/source.json
+++ b/src/translations/source.json
@@ -1,6 +1,10 @@
 {
   "Information": {
   },
+  "Japanies": {
+  },
   "Massage to relax and rehab": {
+  },
+  "Study, practice and work": {
   }
 }
