--- a/src/translations/source.json
+++ b/src/translations/source.json
@@ -1,10 +1,46 @@
 {
+  "Abdominal": {
+  },
+  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. He has worked with acrobats, gymnasts and professional dancers. Thanks to 20 years of dancing experience, he has experience in the technique of recovery the body after injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": {
+  },
+  "Education": {
+  },
+  "Evgeny Soltynchuk ": {
+  },
+  "He worked for American companies Cunard, Princess for 11 years as a professional dancer.": {
+  },
+  "Higher education, pedagogical.": {
+  },
   "Information": {
   },
-  "Japanies": {
+  "Japanese": {
   },
   "Massage to relax and rehab": {
   },
+  "Neck and collar zone (relaxing massage)": {
+  },
+  "Phone: +38 093 110 44 35; +38 066 118 16 08;": {
+  },
+  "Relaxing": {
+  },
   "Study, practice and work": {
+  },
+  "Vietnamese": {
+  },
+  "Visceral chiropractic (abdominal massage)": {
+  },
+  "Work ": {
+  },
+  "Yumeiho therapy 1 stage (Japanese massage technique) ": {
+  },
+  "Yumeiho therapy 1 stage (Japanese massage technique) Built on the basis of body biomechanics and the effect of the displacement of the center of gravity of the pelvic bones on human health.Yumeiho therapy includes full body lymphatic massage, gentle manual therapy and full body muscle work.": {
+  },
+  "Yumeiho therapy stage 2 (Vietnamese massage technique)": {
+  },
+  "Yumeiho therapy stage 2 (Vietnamese massage technique) It is a system of specially selected techniques of compression, twisting and stretch marks (based on martial arts techniques) aimed at deep development of muscles and ligaments, relieving tension from the whole body and increasing the volume of joint movement.": {
+  },
+  "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.": {
+  },
+  "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. ": {
   }
 }
