--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,6 +1,24 @@
 {
+  "Abdominal": "Массаж живота",
+  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. He has worked with acrobats, gymnasts and professional dancers. Thanks to 20 years of dancing experience, he has experience in the technique of recovery the body after injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": "Работал массажистом с профессиональными танцорами, гимнастами ицирковыми акробатами. Благодаря 20-ти летнему танцевальному стажу, есть опыт техники восстановления тела после травм, переломов, растяжений, физической и эмоциональной перегрузке , а также по биомеханике тела и работы мышц.",
+  "Education": "Образование",
+  "Evgeny Soltynchuk ": "Cолтынчук Евгений Леонидович ",
+  "He worked for American companies Cunard, Princess for 11 years as a professional dancer.": "Работа на круизных лайнерах компаний как Cunard, Princess Cruises в качестве профессионального танцора.",
+  "Higher education, pedagogical.": "выпускник университета им. М. П. Драгоманова, педагогический факультет.",
   "Information": "Информация",
-  "Japanies": "Японский",
+  "Japanese": "Японский",
   "Massage to relax and rehab": "Массаж для расслабления и реабилитации",
-  "Study, practice and work": "Обучение, практика и работа."
+  "Neck and collar zone (relaxing massage)": "Шейно-воротниковая зона (расслабляющий массаж)",
+  "Phone: +38 093 110 44 35; +38 066 118 16 08;": "Телефон: +38 093 110 44 35; +38 066 118 16 08;",
+  "Relaxing": "Расслабляющий",
+  "Study, practice and work": "Обучение, практика и работа.",
+  "Vietnamese": "Вьетнамский",
+  "Visceral chiropractic (abdominal massage)": "Висцеральная хиропрактика (массаж живота)",
+  "Work ": "Работа ",
+  "Yumeiho therapy 1 stage (Japanese massage technique) ": "Юмейхо терапия 1 ступень (японская техника массажа) ",
+  "Yumeiho therapy 1 stage (Japanese massage technique) Built on the basis of body biomechanics and the effect of the displacement of the center of gravity of the pelvic bones on human health.Yumeiho therapy includes full body lymphatic massage, gentle manual therapy and full body muscle work.": "Юмейхо терапия 1 ступень (японская техника массажа) Построена на основе биомеханики тела и влиянии смещения центра тяжести костей таза, на здоровье человека. Юмейхо терапия включает в себя лимфатический массаж всего тела, мягкую мануальную терапию и проработку мышц всего тела.",
+  "Yumeiho therapy stage 2 (Vietnamese massage technique)": "Юмейхо терапия 2 ступень (вьетнамская техника массажа)",
+  "Yumeiho therapy stage 2 (Vietnamese massage technique) It is a system of specially selected techniques of compression, twisting and stretch marks (based on martial arts techniques) aimed at deep development of muscles and ligaments, relieving tension from the whole body and increasing the volume of joint movement.": "Юмейхо терапия 2 ступень (вьетнамская техника массажа) Это система специально подобранных приемов обдавливания, скруток и растяжек (основанных на приемах боевых искусств), направленных на глубокую проработку мышц и связок, снятия напряжения со всего тела и увеличения объема движения суставов.",
+  "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.": "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.",
+  "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. ": "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. "
 }
