Add translations and photos

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,24 +1,64 @@
 {
   "Abdominal": "Abdominal",
-  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. He has worked with acrobats, gymnasts and professional dancers. Thanks to 20 years of dancing experience, he has experience in the technique of recovery the body after injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. He has worked with acrobats, gymnasts and professional dancers. Thanks to 20 years of dancing experience, he has experience in the technique of recovery the body after injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.",
+  "Abdominal massage eliminates:": "Abdominal massage eliminates:",
+  "Accelerates the lymph drainage": "Accelerates the lymph drainage",
+  "All of the above types of massage work well for both men and women. Depending on the person’s health status and physical condition, they can be performed in mild, medium and intense manner.": "All of the above types of massage work well for both men and women. Depending on the person’s health status and physical condition, they can be performed in mild, medium and intense manner.",
+  "Applying these two techniques systematically and comprehensively (Yumeiho therapy dan 1,2), such problems are solved as:": "Applying these two techniques systematically and comprehensively (Yumeiho therapy dan 1,2), such problems are solved as:",
+  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. I have worked with acrobats, gymnasts and professional dancers. Thanks to 20-year dancing experience, I have mastered the techniques of body recovery from injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. I have worked with acrobats, gymnasts and professional dancers. Thanks to 20-year dancing experience, I have mastered the techniques of body recovery from injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.",
+  "Catarrhal diseases prevention and immune system stimulation.": "Catarrhal diseases prevention and immune system stimulation.",
+  "Circulation throughout the body": "Circulation throughout the body",
+  "Corrects overweight": "Corrects overweight",
+  "Digestive disorders": "Digestive disorders",
+  "Disease prevention": "Disease prevention",
   "Education": "Education",
+  "Eliminates tight and stiff muscles": "Eliminates tight and stiff muscles",
   "Evgeny Soltynchuk ": "Evgeny Soltynchuk ",
-  "He worked for American companies Cunard, Princess for 11 years as a professional dancer.": "He worked for American companies Cunard, Princess for 11 years as a professional dancer.",
-  "Higher education, pedagogical.": "Higher education, pedagogical.",
+  "Gastrointestinal tract dysfunctions": "Gastrointestinal tract dysfunctions",
+  "Headaches": "Headaches",
+  "Hyper and hypotension": "Hyper and hypotension",
+  "I have a graduate degree in Pedagogy.": "I have a graduate degree in Pedagogy.",
+  "I have worked in the American companies Cunard, Princess for 11 years as a professional dancer.": "I have worked in the American companies Cunard, Princess for 11 years as a professional dancer.",
+  "Improves blood circulation and metabolism in the cervical spine.": "Improves blood circulation and metabolism in the cervical spine.",
+  "Improves the cerebral circulation": "Improves the cerebral circulation",
+  "Improves the nervous system function": "Improves the nervous system function",
+  "Increased fatigability": "Increased fatigability",
   "Information": "Information",
+  "It improves:": "It improves:",
   "Japanese": "Japanese",
+  "Joint pain": "Joint pain",
+  "Kidney pathologies": "Kidney pathologies",
   "Massage to relax and rehab": "Massage to relax and rehab",
-  "Neck and collar zone (relaxing massage)": "Neck and collar zone (relaxing massage)",
+  "Metabolism": "Metabolism",
+  "Metabolism, which is normalized": "Metabolism, which is normalized",
+  "Neck, back, lumbar pain": "Neck, back, lumbar pain",
+  "Neck-collar area (remedial and relaxing massage)": "Neck-collar area (remedial and relaxing massage)",
+  "Neck-collar area massage. It is focused on the muscles around the neck, chest, and shoulder area.": "Neck-collar area massage. It is focused on the muscles around the neck, chest, and shoulder area.",
+  "Normalizes sleep": "Normalizes sleep",
+  "Painful menstruation": "Painful menstruation",
+  "Pancreatitis, the liver and gallbladder dysfunctions.": "Pancreatitis, the liver and gallbladder dysfunctions.",
   "Phone: +38 093 110 44 35; +38 066 118 16 08;": "Phone: +38 093 110 44 35; +38 066 118 16 08;",
-  "Relaxing": "Relaxing",
+  "Poor blood circulation": "Poor blood circulation",
+  "Poor sleep quality": "Poor sleep quality",
+  "Posture": "Posture",
+  "Psychoemotional state": "Psychoemotional state",
+  "Relaxes the muscles of the neck and collar area": "Relaxes the muscles of the neck and collar area",
+  "Relieves pain in the head, neck, and back area": "Relieves pain in the head, neck, and back area",
+  "Remedial & Relaxing": "Remedial & Relaxing",
+  "Reproductive system disorders in men and women": "Reproductive system disorders in men and women",
+  "Respiratory diseases": "Respiratory diseases",
+  "Scoliosis": "Scoliosis",
+  "Sexual desire": "Sexual desire",
   "Study, practice and work": "Study, practice and work",
+  "The cardiovascular system function": "The cardiovascular system function",
+  "The immune system, which is fortified": "The immune system, which is fortified",
+  "Tissue regeneration": "Tissue regeneration",
   "Vietnamese": "Vietnamese",
   "Visceral chiropractic (abdominal massage)": "Visceral chiropractic (abdominal massage)",
+  "Visceral chiropractic (abdominal massage) This is a massage technique for influencing internal organs through compression, pounding, kneading, effleurage to recover the correct organ positions and microcirculation around them. It helps to manage a wide range of organ dysfunctions throughout the body.": "Visceral chiropractic (abdominal massage) This is a massage technique for influencing internal organs through compression, pounding, kneading, effleurage to recover the correct organ positions and microcirculation around them. It helps to manage a wide range of organ dysfunctions throughout the body.",
   "Work ": "Work ",
-  "Yumeiho therapy 1 stage (Japanese massage technique) ": "Yumeiho therapy 1 stage (Japanese massage technique) ",
-  "Yumeiho therapy 1 stage (Japanese massage technique) Built on the basis of body biomechanics and the effect of the displacement of the center of gravity of the pelvic bones on human health.Yumeiho therapy includes full body lymphatic massage, gentle manual therapy and full body muscle work.": "Yumeiho therapy 1 stage (Japanese massage technique) Built on the basis of body biomechanics and the effect of the displacement of the center of gravity of the pelvic bones on human health.Yumeiho therapy includes full body lymphatic massage, gentle manual therapy and full body muscle work.",
-  "Yumeiho therapy stage 2 (Vietnamese massage technique)": "Yumeiho therapy stage 2 (Vietnamese massage technique)",
-  "Yumeiho therapy stage 2 (Vietnamese massage technique) It is a system of specially selected techniques of compression, twisting and stretch marks (based on martial arts techniques) aimed at deep development of muscles and ligaments, relieving tension from the whole body and increasing the volume of joint movement.": "Yumeiho therapy stage 2 (Vietnamese massage technique) It is a system of specially selected techniques of compression, twisting and stretch marks (based on martial arts techniques) aimed at deep development of muscles and ligaments, relieving tension from the whole body and increasing the volume of joint movement.",
-  "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.": "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.",
-  "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. ": "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. "
+  "Work productivity": "Work productivity",
+  "Yumeiho therapy dan 1 (Japanese massage technique) ": "Yumeiho therapy dan 1 (Japanese massage technique) ",
+  "Yumeiho therapy dan 1 (Japanese massage technique) It is based on the body biomechanics and the effect of centere-of-gravity shift of the pelvic bones on human health.Yumeiho therapy includes the whole body lymphatic massage, gentle manual therapy and whole body muscle massage.": "Yumeiho therapy dan 1 (Japanese massage technique) It is based on the body biomechanics and the effect of centere-of-gravity shift of the pelvic bones on human health.Yumeiho therapy includes the whole body lymphatic massage, gentle manual therapy and whole body muscle massage.",
+  "Yumeiho therapy dan 2 (Vietnamese massage technique)": "Yumeiho therapy dan 2 (Vietnamese massage technique)",
+  "Yumeiho therapy dan 2 (Vietnamese massage technique) This is a system of specially selected compressions, twists and stretches (based on martial arts techniques) aimed at deeply massaging muscles and ligaments, relieving stress from the whole body and increasing the joint range of motions.": "Yumeiho therapy dan 2 (Vietnamese massage technique) This is a system of specially selected compressions, twists and stretches (based on martial arts techniques) aimed at deeply massaging muscles and ligaments, relieving stress from the whole body and increasing the joint range of motions."
 }
