--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,24 +1,64 @@
 {
   "Abdominal": "Массаж живота",
-  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. He has worked with acrobats, gymnasts and professional dancers. Thanks to 20 years of dancing experience, he has experience in the technique of recovery the body after injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": "Работал массажистом с профессиональными танцорами, гимнастами ицирковыми акробатами. Благодаря 20-ти летнему танцевальному стажу, есть опыт техники восстановления тела после травм, переломов, растяжений, физической и эмоциональной перегрузке , а также по биомеханике тела и работы мышц.",
+  "Abdominal massage eliminates:": "Массаж живота устраняет:",
+  "Accelerates the lymph drainage": "Ускоряет отток лимфы.",
+  "All of the above types of massage work well for both men and women. Depending on the person’s health status and physical condition, they can be performed in mild, medium and intense manner.": "Все вышеперечисленные виды массажа, хорошо работают, как для мужчин , так и для женщин. И в зависимости от состояния здоровья и физической кондиции человека, могут исполняться с легкой, средней и интенсивной нагрузкой.",
+  "Applying these two techniques systematically and comprehensively (Yumeiho therapy dan 1,2), such problems are solved as:": "Благодаря системному и комплексному подходу двух техник (Юмейхо ступень 1,2), решаются такие проблемы как:",
+  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. I have worked with acrobats, gymnasts and professional dancers. Thanks to 20-year dancing experience, I have mastered the techniques of body recovery from injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": "На данный момент я сертифицированный специалист по реабилитационному массажу со стажем работы 5 лет. Работал массажистом с профессиональными танцорами, гимнастами и акробатами. Благодаря 20-ти летнему танцевальному стажу, есть опыт техники восстановления тела после травм, переломов, растяжений, физической и эмоциональной перегрузке , а также по биомеханике тела и работы мышц.",
+  "Catarrhal diseases prevention and immune system stimulation.": "Профилактика простудных заболеваний и стимуляция иммунной системы.",
+  "Circulation throughout the body": "Кровообращение во всем теле",
+  "Corrects overweight": "Корректирует избыточный вес",
+  "Digestive disorders": "Расстройства пищеварения",
+  "Disease prevention": "Профилактика заболеваний",
   "Education": "Образование",
+  "Eliminates tight and stiff muscles": "Устраняет перенапряжение и скованность в мышцах.",
   "Evgeny Soltynchuk ": "Cолтынчук Евгений Леонидович ",
-  "He worked for American companies Cunard, Princess for 11 years as a professional dancer.": "Работа на круизных лайнерах компаний как Cunard, Princess Cruises в качестве профессионального танцора.",
-  "Higher education, pedagogical.": "выпускник университета им. М. П. Драгоманова, педагогический факультет.",
+  "Gastrointestinal tract dysfunctions": "Дисфункции работы желудочно-кишечного тракта",
+  "Headaches": "Головные боли",
+  "Hyper and hypotension": "Высокое и низкое давление",
+  "I have a graduate degree in Pedagogy.": "выпускник университета им. М. П. Драгоманова, педагогический факультет.",
+  "I have worked in the American companies Cunard, Princess for 11 years as a professional dancer.": "Работа на круизных лайнерах американских компаний как Cunard, Princess Cruises в качестве профессионального танцора.",
+  "Improves blood circulation and metabolism in the cervical spine.": "Улучшает кровообращение и обмен веществ в шейном отделе.",
+  "Improves the cerebral circulation": "Улучшает кровоснабжение головного мозга.",
+  "Improves the nervous system function": "Улучшается работа нервной системы",
+  "Increased fatigability": "Повышенная утомляемость",
   "Information": "Информация",
+  "It improves:": "УЛУЧШАЕТСЯ:",
   "Japanese": "Японский",
+  "Joint pain": "Боли в суставах",
+  "Kidney pathologies": "Патологии работы почек",
   "Massage to relax and rehab": "Массаж для расслабления и реабилитации",
-  "Neck and collar zone (relaxing massage)": "Шейно-воротниковая зона (расслабляющий массаж)",
+  "Metabolism": "Метаболизм",
+  "Metabolism, which is normalized": "Нормализуется обмен веществ",
+  "Neck, back, lumbar pain": "Боли в шее, спине, пояснице",
+  "Neck-collar area (remedial and relaxing massage)": "Шейно-воротниковая зона (Расслабляющий массаж)",
+  "Neck-collar area massage. It is focused on the muscles around the neck, chest, and shoulder area.": "Массаж шейно-воротниковой зоны. Включает в себя проработку шеи, грудного отдела и плечевого пояса.",
+  "Normalizes sleep": "Нормализуется сон",
+  "Painful menstruation": "Болезненные месячные",
+  "Pancreatitis, the liver and gallbladder dysfunctions.": "Воспаление поджелудочной железы, ослабление работы печени и желчного пузыря.",
   "Phone: +38 093 110 44 35; +38 066 118 16 08;": "Телефон: +38 093 110 44 35; +38 066 118 16 08;",
-  "Relaxing": "Расслабляющий",
+  "Poor blood circulation": "Плохая циркуляция крови",
+  "Poor sleep quality": "Плохой сон",
+  "Posture": "Осанка",
+  "Psychoemotional state": "Психоэмоциональное состояние",
+  "Relaxes the muscles of the neck and collar area": "Расслабляет мышцы шейно-воротниковой зоны",
+  "Relieves pain in the head, neck, and back area": "Убирает боли в зоне головы, шеи и спины.",
+  "Remedial & Relaxing": "Расслабляющий",
+  "Reproductive system disorders in men and women": "Нарушение работы половой системы у мужчин и женщин",
+  "Respiratory diseases": "Недуги органов дыхания",
+  "Scoliosis": "Сколиоз",
+  "Sexual desire": "Сексуальное желание",
   "Study, practice and work": "Обучение, практика и работа.",
+  "The cardiovascular system function": "Работу сердечно-сосудистой системы",
+  "The immune system, which is fortified": "Укрепляется иммунная система",
+  "Tissue regeneration": "Регенерация тканей",
   "Vietnamese": "Вьетнамский",
   "Visceral chiropractic (abdominal massage)": "Висцеральная хиропрактика (массаж живота)",
+  "Visceral chiropractic (abdominal massage) This is a massage technique for influencing internal organs through compression, pounding, kneading, effleurage to recover the correct organ positions and microcirculation around them. It helps to manage a wide range of organ dysfunctions throughout the body.": "Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.",
   "Work ": "Работа ",
-  "Yumeiho therapy 1 stage (Japanese massage technique) ": "Юмейхо терапия 1 ступень (японская техника массажа) ",
-  "Yumeiho therapy 1 stage (Japanese massage technique) Built on the basis of body biomechanics and the effect of the displacement of the center of gravity of the pelvic bones on human health.Yumeiho therapy includes full body lymphatic massage, gentle manual therapy and full body muscle work.": "Юмейхо терапия 1 ступень (японская техника массажа) Построена на основе биомеханики тела и влиянии смещения центра тяжести костей таза, на здоровье человека. Юмейхо терапия включает в себя лимфатический массаж всего тела, мягкую мануальную терапию и проработку мышц всего тела.",
-  "Yumeiho therapy stage 2 (Vietnamese massage technique)": "Юмейхо терапия 2 ступень (вьетнамская техника массажа)",
-  "Yumeiho therapy stage 2 (Vietnamese massage technique) It is a system of specially selected techniques of compression, twisting and stretch marks (based on martial arts techniques) aimed at deep development of muscles and ligaments, relieving tension from the whole body and increasing the volume of joint movement.": "Юмейхо терапия 2 ступень (вьетнамская техника массажа) Это система специально подобранных приемов обдавливания, скруток и растяжек (основанных на приемах боевых искусств), направленных на глубокую проработку мышц и связок, снятия напряжения со всего тела и увеличения объема движения суставов.",
-  "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.": "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.",
-  "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. ": "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. "
+  "Work productivity": "Продуктивность работы",
+  "Yumeiho therapy dan 1 (Japanese massage technique) ": "Юмейхо терапия ступень 1 (Японская техника массажа) ",
+  "Yumeiho therapy dan 1 (Japanese massage technique) It is based on the body biomechanics and the effect of centere-of-gravity shift of the pelvic bones on human health.Yumeiho therapy includes the whole body lymphatic massage, gentle manual therapy and whole body muscle massage.": "Юмейхо терапия ступень 1 (японская техника массажа) Построена на основе биомеханики тела и влиянии смещения центра тяжести костей таза, на здоровье человека. Юмейхо терапия включает в себя лимфатический массаж всего тела, мягкую мануальную терапию и проработку мышц всего тела.",
+  "Yumeiho therapy dan 2 (Vietnamese massage technique)": "Юмейхо терапия ступень 2 (Вьетнамская техника массажа)",
+  "Yumeiho therapy dan 2 (Vietnamese massage technique) This is a system of specially selected compressions, twists and stretches (based on martial arts techniques) aimed at deeply massaging muscles and ligaments, relieving stress from the whole body and increasing the joint range of motions.": "Юмейхо терапия ступень 2 (вьетнамская техника массажа) Это система специально подобранных приемов обдавливания, скруток и растяжек (основанных на приемах боевых искусств), направленных на глубокую проработку мышц и связок, снятия напряжения со всего тела и увеличения объема движения суставов."
 }
