--- a/src/translations/source.json
+++ b/src/translations/source.json
@@ -1,46 +1,126 @@
 {
   "Abdominal": {
   },
-  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. He has worked with acrobats, gymnasts and professional dancers. Thanks to 20 years of dancing experience, he has experience in the technique of recovery the body after injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": {
+  "Abdominal massage eliminates:": {
+  },
+  "Accelerates the lymph drainage": {
+  },
+  "All of the above types of massage work well for both men and women. Depending on the person’s health status and physical condition, they can be performed in mild, medium and intense manner.": {
+  },
+  "Applying these two techniques systematically and comprehensively (Yumeiho therapy dan 1,2), such problems are solved as:": {
+  },
+  "At the moment he is a certified specialist in the field of rehabilitation massage, with 5 years of experience. I have worked with acrobats, gymnasts and professional dancers. Thanks to 20-year dancing experience, I have mastered the techniques of body recovery from injuries, fractures, sprains, physical and emotional overload, as well as in the biomechanics of the body and muscle work.": {
+  },
+  "Catarrhal diseases prevention and immune system stimulation.": {
+  },
+  "Circulation throughout the body": {
+  },
+  "Corrects overweight": {
+  },
+  "Digestive disorders": {
+  },
+  "Disease prevention": {
   },
   "Education": {
   },
+  "Eliminates tight and stiff muscles": {
+  },
   "Evgeny Soltynchuk ": {
   },
-  "He worked for American companies Cunard, Princess for 11 years as a professional dancer.": {
+  "Gastrointestinal tract dysfunctions": {
   },
-  "Higher education, pedagogical.": {
+  "Headaches": {
+  },
+  "Hyper and hypotension": {
+  },
+  "I have a graduate degree in Pedagogy.": {
+  },
+  "I have worked in the American companies Cunard, Princess for 11 years as a professional dancer.": {
+  },
+  "Improves blood circulation and metabolism in the cervical spine.": {
+  },
+  "Improves the cerebral circulation": {
+  },
+  "Improves the nervous system function": {
+  },
+  "Increased fatigability": {
   },
   "Information": {
   },
+  "It improves:": {
+  },
   "Japanese": {
+  },
+  "Joint pain": {
+  },
+  "Kidney pathologies": {
   },
   "Massage to relax and rehab": {
   },
-  "Neck and collar zone (relaxing massage)": {
+  "Metabolism": {
+  },
+  "Metabolism, which is normalized": {
+  },
+  "Neck, back, lumbar pain": {
+  },
+  "Neck-collar area (remedial and relaxing massage)": {
+  },
+  "Neck-collar area massage. It is focused on the muscles around the neck, chest, and shoulder area.": {
+  },
+  "Normalizes sleep": {
+  },
+  "Painful menstruation": {
+  },
+  "Pancreatitis, the liver and gallbladder dysfunctions.": {
   },
   "Phone: +38 093 110 44 35; +38 066 118 16 08;": {
   },
-  "Relaxing": {
+  "Poor blood circulation": {
+  },
+  "Poor sleep quality": {
+  },
+  "Posture": {
+  },
+  "Psychoemotional state": {
+  },
+  "Relaxes the muscles of the neck and collar area": {
+  },
+  "Relieves pain in the head, neck, and back area": {
+  },
+  "Remedial & Relaxing": {
+  },
+  "Reproductive system disorders in men and women": {
+  },
+  "Respiratory diseases": {
+  },
+  "Scoliosis": {
+  },
+  "Sexual desire": {
   },
   "Study, practice and work": {
+  },
+  "The cardiovascular system function": {
+  },
+  "The immune system, which is fortified": {
+  },
+  "Tissue regeneration": {
   },
   "Vietnamese": {
   },
   "Visceral chiropractic (abdominal massage)": {
   },
+  "Visceral chiropractic (abdominal massage) This is a massage technique for influencing internal organs through compression, pounding, kneading, effleurage to recover the correct organ positions and microcirculation around them. It helps to manage a wide range of organ dysfunctions throughout the body.": {
+  },
   "Work ": {
   },
-  "Yumeiho therapy 1 stage (Japanese massage technique) ": {
+  "Work productivity": {
   },
-  "Yumeiho therapy 1 stage (Japanese massage technique) Built on the basis of body biomechanics and the effect of the displacement of the center of gravity of the pelvic bones on human health.Yumeiho therapy includes full body lymphatic massage, gentle manual therapy and full body muscle work.": {
+  "Yumeiho therapy dan 1 (Japanese massage technique) ": {
   },
-  "Yumeiho therapy stage 2 (Vietnamese massage technique)": {
+  "Yumeiho therapy dan 1 (Japanese massage technique) It is based on the body biomechanics and the effect of centere-of-gravity shift of the pelvic bones on human health.Yumeiho therapy includes the whole body lymphatic massage, gentle manual therapy and whole body muscle massage.": {
   },
-  "Yumeiho therapy stage 2 (Vietnamese massage technique) It is a system of specially selected techniques of compression, twisting and stretch marks (based on martial arts techniques) aimed at deep development of muscles and ligaments, relieving tension from the whole body and increasing the volume of joint movement.": {
+  "Yumeiho therapy dan 2 (Vietnamese massage technique)": {
   },
-  "Висцеральная хиропрактика (массаж живота) Это техника воздействия руками на внутренние органы посредством надавливания, простукивания, сдвижения, массажа, с целью восстановления правильного положения органов и микроциркуляции вокруг них. Помогает справляться с широким спектром ослабления функций органов всего тела.": {
-  },
-  "Массаж шейно-воротниковой зоны.  Включает в себя проработку шеи, грудного отдела и плечевого пояса. ": {
+  "Yumeiho therapy dan 2 (Vietnamese massage technique) This is a system of specially selected compressions, twists and stretches (based on martial arts techniques) aimed at deeply massaging muscles and ligaments, relieving stress from the whole body and increasing the joint range of motions.": {
   }
 }
